semifinal detail html

--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -44,6 +44,7 @@
         height: 40px;
         font-size: 20px;
         line-height: 20px !important;
+    }
     input:focus:-ms-input-placeholder {
         color: #E76C42 !important;
     }
@@ -63,22 +64,18 @@
         text-align: left;
         line-height: 30px;
     }
-    .calculate {
-        color: #FFFFFF;
-        background-color: #727270;
-        text-align: center;
-        float: right;
-    }
     .back {
         color: #FFFFFF; 
         background-color: #E76C42;
-        width: 20%;
-        height: 40px;
         text-align: center;
         float: left;
     }
     .calculate {
-      transition: all 0.8s ease;
+      color: #FFFFFF;
+      background-color: #727270;
+      text-align: center;
+      float: right;
+      margin-left: 10px;
     }
     .calculate:hover {
       background: #E76C42;
@@ -90,6 +87,12 @@
         border-right: 2px solid #F3F3F3 !important;
         border-bottom: 2px solid #F3F3F3 !important;
     }
+    .select {
+        color: #FFFFFF;
+        background-color: #727270;
+        text-align: center;
+        margin-left: 10px;
+    }
 </style>
 {% endblock extracss %}
 
@@ -98,125 +101,14 @@
 <div class="row">
     <div class="col-xs-12" style="padding-top: 10%">
         <div class="row">
-            <div class="col-xs-10 col-sm-10 col-md-2"></div>
-            <div class="col-xs-12 col-sm-12 col-md-8 panel panel-default" style="border-width: 4px; border-color: 8CA5F0; border-top-color: #E76C42;">
-                <div class="panel-body">
-                    <div style="margin: 1% auto;">
-                        <div class="login-logo">
-                        </div><!-- /.login-logo -->
-                        <div class="login-box-body">
-                            <table style="width:100%">
-                              <tr>
-                                <th>Descp. de Cobertura</th>
-                                <th>Suma Asegurada<br>Por persona/Por accidente</th>
-                                <th>Deducible</th>
-                                <th>Prima</th>
-                              </tr>
-                              <tr>
-                                <td>Lesiones Corporales</td>
-                                <td>{{ cotizacion.lesiones_corporales }}</td>
-                                <td></td>
-                                <td>{{ cotizacion.prima_lesiones|floatformat:2|intcomma }}</td>
-                              </tr>
-                              <tr>
-                                <td>Daños a la Propiedad Ajena</td>
-                                <td>{{ cotizacion.danios_propiedad }}</td>
-                                <td></td>
-                                <td>{{ cotizacion.prima_daniosProp|floatformat:2|intcomma }}</td>
-                              </tr>
-                              <tr>
-                                <td>Gastos Médicos por Accidente</td>
-                                <td>{{ cotizacion.gastos_medicos }}</td>
-                                <td></td>
-                                <td>{{ cotizacion.prima_gastosMedicos|floatformat:2|intcomma }}</td>
-                              </tr>
-                              <tr>
-                                <td>Otros Daños</td>
-                                <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
-                                <td>{{ cotizacion.otros_danios|floatformat:2|intcomma }}</td>
-                                <td>{{ cotizacion.prima_otrosDanios|floatformat:2|intcomma }}</td>
-                              </tr>
-                              <tr>
-                                <td>Colisión y Vuelco</td>
-                                <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
-                                <td>{{ cotizacion.colision_vuelco|floatformat:2|intcomma }}</td>
-                                <td>{{ cotizacion.prima_colisionVuelco|floatformat:2|intcomma }}</td>
-                              </tr>
-                              <tr>
-                                <td>Incendio y Rayo</td>
-                                <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
-                                <td>{{ cotizacion.incendio_rayo|floatformat:2|intcomma }}</td>
-                                <td>-</td>
-                              </tr>
-                              <tr>
-                                <td>Robo y Hurto</td>
-                                <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
-                                <td>{{ cotizacion.robo_hurto|floatformat:2|intcomma }}</td>
-                                <td>-</td>
-                              </tr>
-                              <tr>
-                                <td>Muerte Accidental</td>
-                                <td>{{ cotizacion.muerte_accidental }}</td>
-                                <td></td>
-                                <td>-</td>
-                              </tr>
-                              <tr>
-                                <td>Asistencia Legal</td>
-                                <td>Incluido</td>
-                                <td></td>
-                                <td>-</td>
-                              </tr>
-                              <tr>
-                                <td>Importación de Piezas</td>
-                                {% if cotizacion.importacion_piezas%}
-                                  <td>Incluido</td>
-                                  <td></td>
-                                  <td>{{ cotizacion.prima_importacion|floatformat:2|intcomma }}</td>
-                                {% else %}
-                                  <td>No Incluido</td>
-                                  <td></td>
-                                  <td>-</td>
-                                {% endif %}
-                              </tr>
-                              <tr>
-                                <td>Acerta Preferencial Plus</td>
-                                <td>Incluido</td>
-                                <td></td>
-                                <td>{{ cotizacion.prima_preferencialPlus|floatformat:2|intcomma }}</td>
-                              </tr>
-                            </table>
-                            <h5 style="text-align: left;"><strong>Endoso:</strong> {{ cotizacion.endoso }}</h5>
-                            {% bootstrap_form_errors form %}
-                            <form action="" method="post" role="form" class="form-horizontal">
-                            <div class="col-md-4"></div>
-                            <div class="col-md-2">
-                                <h5><br></h5>
-                                <h5><br></h5>
-                                <h5><br></h5>
-                                <h5>{% bootstrap_field form.cuotas layout='horizontal' %}</h5>
-                                <h5><br></h5>
-                                <h5><br></h5>
-                                <h5><br></h5>
-                            </div>
-                            <div class="col-md-3 text-right">
-                              <h5>Subtotal:</h5>
-                              <h5>Impuestos:</h5>
-                              <h5><strong>Total a Pagar:</strong></h5>
-                              <h5>Prima Mensual:</h5>
-                              <h5>Prima Pago de Contado:</h5>
-                              <h5>Prima Pago ACH/Visa:</h5>
-                            </div>
-                            <div class="col-md-3" style="text-align:left;">
-                              <h5>B/.  {{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
-                              <h5>B/.  {{ cotizacion.impuestos|floatformat:2|intcomma }}</h5>
-                              <h5><strong>B/.  {{ cotizacion.total|floatformat:2|intcomma }}</strong></h5>
-                              <h5 id="prima-mensual" data-total="{{ cotizacion.total|floatformat:2 }}">B/.  </h5>
-                              <h5>B/.  {{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</h5>
-                              <h5>B/.  {{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</h5>
-                            </div>
-                            <br>
-                        </div><!-- /.login-box-body -->
-                    </div><!-- /.login-box -->
+            <div class="col-md-12">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 text-center">
+                    <h1 id="titulo-login" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVILES</strong></h1>
+                    <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea la póliza</h3>
+                    <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}">
+                    <h3 id="subtitulo2" class="text-center"><strong>COTIZA</strong></h3>
+                    <br>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -318,7 +210,7 @@
                     {% bootstrap_form_errors form %}
                     <form action="" method="post" role="form" class="form-horizontal">
                     <div class="col-md-5"></div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <h5><br></h5>
                         <h5><br></h5>
                         <h5><br></h5>
@@ -327,14 +219,23 @@
                         <h5><br></h5>
                         <h5><br></h5>
                     </div>
-                    <div class="col-md-4 text-right">
-                      <h5><strong>Endoso: {{ cotizacion.endoso }}</strong></h5>
-                      <h5>Subtotal: B/.{{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
-                      <h5>Impuestos: B/.{{ cotizacion.impuestos|floatformat:2|intcomma }}</h5>
-                      <h5><strong>Total a Pagar: B/.{{ cotizacion.total|floatformat:2|intcomma }}</strong></h5>
-                      <h5 id="prima-mensual" data-total="{{ cotizacion.total|floatformat:2 }}"><strong>Prima Mensual: B/. {{ cotizacion.prima_mensual|floatformat:2 }}</strong></h5>
-                      <h5><strong>Prima Pago de Contado: B/.{{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</strong></h5>
-                      <h5>Prima Pago ACH/Visa: B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</h5>
+                    <div class="col-md-3 text-right" style="text-align:left;">
+                      <h5><strong>Endoso:</strong></h5>
+                      <h5>Subtotal:</h5>
+                      <h5>Impuestos:</h5>
+                      <h5><strong>Total a Pagar:</strong></h5>
+                      <h5><strong>Prima Mensual:</strong></h5>
+                      <h5><strong>Prima Pago de Contado:</strong></h5>
+                      <h5>Prima Pago ACH/Visa:</h5>
+                    </div>
+                    <div class="col-md-2 text-right" style="text:align:left;">
+                      <h5><strong>{{ cotizacion.endoso }}</strong></h5>
+                      <h5>B/.{{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
+                      <h5>B/.{{ cotizacion.impuestos|floatformat:2|intcomma }}</h5>
+                      <h5><strong>B/.{{ cotizacion.total|floatformat:2|intcomma }}</strong></h5>
+                      <h5 id="prima-mensual" data-total="{{ cotizacion.total|floatformat:2 }}"><strong>B/. {{ cotizacion.prima_mensual|floatformat:2 }}</strong></h5>
+                      <h5><strong>B/.{{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</strong></h5>
+                      <h5>B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</h5>
                     </div>
                     <br>
                     </div><!-- /.box-body -->
@@ -346,16 +247,16 @@
         <div class="col-md-2"></div>
         <div class="col-md-10 btn-group-lg">
           <div class="col-md-2">
-            <a class="btn btn-lg calculate" href="{% url 'ver_planes' pk1 pk2 pk3 pk4 %}"><span class="glyphicon glyphicon-chevron-left"></span>Volver</a>
+            <a class="btn btn-lg back" href="{% url 'ver_planes' pk1 pk2 pk3 pk4 %}"><span class="glyphicon glyphicon-chevron-left"></span>Volver</a>
           </div>
           <div class="col-md-2"></div>
           <div class="col-md-6 text-center btn-toolbar">
           <div class="col-md-2"></div>
             <div class="col-md-4">
-                <a class="btn btn-lg calculate" href="{% url 'vehiculo' %}">Volver a Cotizar</a>
+                <a class="btn btn-lg calculate" href="{% url 'vehiculo' %}">Nueva Cotización</a>
             </div>
             <div class="col-md-3">
-                <a class="btn btn-lg calculate" href="{% url 'vehiculo' %}">Guardar</a>
+                <a class="btn btn-lg back" href="{% url 'vehiculo' %}" style="margin-left:10px;">Guardar</a>
             </div>
             <div class="col-md-2">
               {% csrf_token %}
@@ -370,24 +271,6 @@
           </div>
 
     </div>
-</div>
-<div class="row">
-    <div class="col-md-2" style="padding-top: 1px; padding-bottom: 1%;">
-    </div>
-    <div class="col-md-4 text-center" style="padding-top: 1px; padding-bottom: 1%;">
-        <button class="btn btn-lg back">
-          <a id='opcion1' style="color:#ffffff;"href="{% url 'vehiculo'"><strong><  </strong> Volver
-          </a>
-      </button>
-    </div>
-    <div class="col-md-4 text-center" style="padding-top: 1px; padding-bottom: 1%;">
-      {% csrf_token %}
-      <button type="submit" class="btn select btn-lg" style="margin-left: 20px;">
-        ENVIAR
-      </button>
-      <a class="btn select btn-lg" href="{% url 'vehiculo' %}">Nueva Cotización</a>
-    </div>
-    <div class="col-md-2" style="padding-top: 1px; padding-bottom: 10%;"></div>
 </div>
 {% endblock content %}
 
