--- a/cotizador_acerta/static/css/hamburger.css
+++ b/cotizador_acerta/static/css/hamburger.css
@@ -1,9 +1,9 @@
 header {
   background: #F3F3F3;
-  padding: 15px 5px;
+  padding: 30px 5px;
   position: relative;
   z-index: 1;
-  border-bottom: 6px solid #E76C42;
+  border-bottom: 10px solid #E76C42;
 }
 
 #menu2 {
@@ -31,3 +31,69 @@ header {
   padding: 0.7em;
 }
 #menu2 ul li.on-hidden { display: none; }
+
+#on-hidden-menu {
+  display: block;
+  position: absolute;
+  z-index: 10;
+  right: 0;
+  margin-top: 15px;
+  min-width: 280px;
+}
+
+#on-hidden-menu ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative;
+  overflow: hidden;
+  height: 0;
+}
+
+#on-hidden-menu li {
+  background: #30424d;
+  border-bottom: 1px solid #273640;
+  opacity: 0;
+  -moz-transition: all .4s ease-in-out .2s;
+  -o-transition: all .4s ease-in-out .2s;
+  -webkit-transition: all .4s ease-in-out .2s;
+  transition: all .4s ease-in-out .2s;
+  position: relative;
+}
+
+#on-hidden-menu li a {
+  color: rgba(255,255,255,.9);
+  text-decoration: none;
+  padding: 10px 15px;
+  display: block;
+}
+
+#on-hidden-menu li a:hover { background: #354C5A; }
+
+#on-hidden-menu.open ul {
+  display: block;
+  height: 100%;
+}
+
+#on-hidden-menu.open ul li { opacity: 1; }
+
+#on-hidden-menu.open ul li:last-child { border-bottom-left-radius: 5px; }
+#on-hidden-menu .toggle{
+  width: 50px;
+  position: absolute;
+  top: -50px;
+  right: 10px;
+  height: 50px;
+  background-color: transparent;
+  border: solid 1px black;
+  z-index: 1;
+  cursor: pointer;
+  border-radius: 30px;
+}
+
+.glyphicon {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    font-size: 25px;
+}
