--- a/cotizador_acerta/static/css/sidemenu.css
+++ b/cotizador_acerta/static/css/sidemenu.css
@@ -169,7 +169,7 @@
 .sm-item-label:hover {
     -webkit-box-shadow: inset 0 -1px rgba(0,0,0,0);
             box-shadow: inset 0 -1px rgba(0,0,0,0);
-    background: rgba(0,0,0,0.2);
+    background: #727270;
     color: #FFF;
 }
 
